# IRayTestCode

./: CMakeLists.txt  README.md
SDK/IRay/libir_SDK_release/include/: libircmd.h  libircmd_temp.h  libiruart.h  libiruvc.h
SDK/IRay/libir_sample/: lib_include_copy.py
SDK/IRay/libir_sample/common/: config.cpp  config.h  data.cpp  data.h  drm_display.cpp  drm_display.h  opencv_display.cpp  opencv_display.h  spi_camera.cpp  spi_camera.h  uvc_camera.cpp  uvc_camera.h  v4l2_camera.cpp  v4l2_camera.h
SDK/IRay/libir_sample/complex_sample/: README.md
SDK/IRay/libir_sample/complex_sample/temp_cor/temp_measure/: README.md
SDK/IRay/libir_sample/complex_sample/temp_cor/temp_measure/get_by_command/: README.md  build.bat  sample.cpp
SDK/IRay/libir_sample/complex_sample/temp_cor/temp_measure/get_by_command/msvc/: get_by_command.sln  get_by_command.vcxproj  get_by_command.vcxproj.filters
SDK/IRay/libir_sample/complex_sample/temp_cor/temp_measure/get_from_frame/: README.md  build.bat  sample.cpp
SDK/IRay/libir_sample/complex_sample/temp_cor/temp_measure/get_from_frame/msvc/: get_from_frame.sln  get_from_frame.vcxproj
SDK/IRay/libir_sample/components/: capture.cpp  capture.h  cmd.cpp  cmd.h  info_parse.cpp  info_parse.h  temp_measure.cpp  temp_measure.h
SDK/IRay/libir_sample/config/: stream.conf  stream_RV1126.conf  stream_RV1126_uvc.conf  stream_config.md  stream_win.conf
SDK/IRay/libir_sample/drivers/: UVC-I2C.txt  drivers_readme.txt  usb-i2c-V4L2.txt
SDK/IRay/libir_sample/interfaces/: Eazyai_yolov5.h  interfaces_readme.txt  libir_camera_data.h  libircmd_test.h  libircmdchannel.h
SDK/IRay/libir_sample/other/: libirprocess.h  other_readme.txt
SDK/IRay/libir_sample/sample/info_line_parse/: CMakeLists.txt  cmake.sh  cross_compilation_tool_chain.sh  sample.cpp  sample.h
SDK/IRay/libir_sample/sample/mipi_2vc_stream_cmd/: CMakeLists.txt  cross_compilation_tool_chain.sh  sample.cpp  sample.h
SDK/IRay/libir_sample/sample/multi_point_calibration/: CMakeLists.txt  cross_compilation_tool_chain.sh
SDK/IRay/libir_sample/sample/multi_point_calibration/include/: sample.h
SDK/IRay/libir_sample/sample/multi_point_calibration/msvc/: multi_point_calibration.sln  multi_point_calibration.vcxproj  multi_point_calibration.vcxproj.filters
SDK/IRay/libir_sample/sample/multi_point_calibration/src/: sample.cpp
SDK/IRay/libir_sample/sample/stream_cmd/: CMakeLists.txt  cross_compilation_tool_chain.sh  sample.cpp  sample.h
SDK/IRay/libir_sample/sample/stream_cmd_uvc/: CMakeLists.txt  cmake.sh  cross_compilation_tool_chain.sh  sample.cpp  sample.h
SDK/IRay/libir_sample/sample/uart_cmd/: CMakeLists.txt  compile.bat  cross_compilation_tool_chain.sh
SDK/IRay/libir_sample/sample/uart_cmd/include/: sample.h
SDK/IRay/libir_sample/sample/uart_cmd/msvc/: uart_cmd.sln  uart_cmd.vcxproj  uart_cmd.vcxproj.filters
SDK/IRay/libir_sample/sample/uart_cmd/src/: sample.cpp
SDK/IRay/libir_sample/sample/upgrade/: CMakeLists.txt
SDK/IRay/libir_sample/sample/upgrade/include/: sample.h
SDK/IRay/libir_sample/sample/upgrade/msvc/: upgrade.sln  upgrade.vcxproj  upgrade.vcxproj.filters
SDK/IRay/libir_sample/sample/upgrade/src/: sample.cpp
SDK/IRay/libir_sample/sample/usb_stream_cmd/: compile.bat
SDK/IRay/libir_sample/sample/usb_stream_cmd/include/: sample.h
SDK/IRay/libir_sample/sample/usb_stream_cmd/msvc/: windows_usb_stream_cmd.sln  windows_usb_stream_cmd.vcxproj  windows_usb_stream_cmd.vcxproj.filters
SDK/IRay/libir_sample/sample/usb_stream_cmd/src/: sample.cpp
SDK/IRay/libir_sample/simple_sample/: README.md
SDK/IRay/libir_sample/simple_sample/cmd/: README.md
SDK/IRay/libir_sample/simple_sample/cmd/linux/i2c/: CMakeLists.txt  README.md  cross_compilation_tool_chain.sh  sample.cpp
SDK/IRay/libir_sample/simple_sample/cmd/linux/uart/: CMakeLists.txt  README.md  sample.cpp
SDK/IRay/libir_sample/simple_sample/cmd/windows/uart/: README.md  build.bat  sample.cpp
SDK/IRay/libir_sample/simple_sample/cmd/windows/uart/msvc/: cmd_uart.sln  cmd_uart.vcxproj
SDK/IRay/libir_sample/simple_sample/cmd/windows/usb/: README.md  build.bat  sample.cpp
SDK/IRay/libir_sample/simple_sample/cmd/windows/usb-i2c/: README.md  build.bat  sample.cpp
SDK/IRay/libir_sample/simple_sample/cmd/windows/usb-i2c/msvc/: cmd_usb-i2c.sln  cmd_usb-i2c.vcxproj
SDK/IRay/libir_sample/simple_sample/cmd/windows/usb/msvc/: cmd_usb.sln  cmd_usb.vcxproj
SDK/IRay/libir_sample/simple_sample/cmd_camera/: README.md
SDK/IRay/libir_sample/simple_sample/cmd_camera/linux/uvc_usb/: CMakeLists.txt  README.md  sample.cpp  sample1.cpp
SDK/IRay/libir_sample/simple_sample/cmd_camera/linux/v4l2_i2c/: CMakeLists.txt  README.md  cross_compilation_tool_chain.sh  sample.cpp
SDK/IRay/libir_sample/simple_sample/cmd_camera/windows/uvc_usb/: README.md  build.bat  sample.cpp
SDK/IRay/libir_sample/simple_sample/cmd_camera/windows/uvc_usb/msvc/: cmd_camera_windows.sln  cmd_camera_windows.vcxproj
SDK/IRay/libir_sample/simple_sample/info_line/: CMakeLists.txt  README.md  build.bat  build.sh  sample.cpp
Src/TbdpApplication/: CMakeLists.txt  main.cpp
